fix overlapping of containers

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -137,6 +137,7 @@ nav img {
   align-items: center;
   flex-direction: column;
   border-radius: 2rem;
+  z-index: 9999;
 }
 .add-expense-div h3 {
   font-size: 2rem;
